<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocationDetailsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/location_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            tools:src="@drawable/bahai" />

        <TextView
            android:padding="@dimen/large_padding"
            style="@style/Base.TextAppearance.AppCompat.Large"
            android:shadowColor="@android:color/black"
            android:shadowDx="5"
            android:shadowDy="5"
            android:shadowRadius="5"
            android:id="@+id/location_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/location_thumbnail"
            android:textColor="@android:color/white"
            tools:text="@string/bahai_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/large_padding"
            android:layout_below="@id/location_thumbnail"
            android:orientation="vertical">

            <TextView
                android:drawableLeft="@drawable/ic_location"
                android:drawablePadding="@dimen/default_padding"
                android:id="@+id/location_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/bahai_address" />

            <TextView
                android:drawableLeft="@drawable/ic_phone"
                android:drawablePadding="@dimen/default_padding"
                android:id="@+id/location_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="phone"
                tools:text="@string/bahai_phone" />

            <TextView
                android:drawableLeft="@drawable/ic_url"
                android:drawablePadding="@dimen/default_padding"
                android:id="@+id/location_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                tools:text="@string/bahai_url" />

            <TextView
                android:paddingTop="@dimen/default_padding"
                android:id="@+id/location_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/bahai_description" />

            <TextView
                android:paddingTop="@dimen/default_padding"
                android:id="@+id/location_source"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                tools:text="@string/bahai_source" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>